<resources>
    <string name="app_name">Minimilist Launcher</string>
    <string name="title_activity_settings">Settings</string>
    <string name="key_edit_favourite">key_edit_favourite</string>
    <string name="title_edit_favourite">Edit Favourite App</string>
    <string name="summary_edit_favourite">Add or remove your favourite apps from home screen</string>
    <string name="key_edit_color">key_edit_color</string>
    <string name="title_edit_color">Change Color of App Search</string>
    <string name="summary_edit_color">Change the color of the app search to provide better bottom finish</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
</resources>
